--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,6 @@
 		\nВетер: %d м/с
 		\nОблачность: %d%%
 		\nДавление: %d мм
-		icon=%s
 	</string>
 	<string name="detail_temperature">%+d°C</string>
 	<string name="detail_wind">Ветер: %d м/с</string>
@@ -19,4 +18,6 @@
 	<string name="geo_disabled">Геолокация отключена</string>
 	<string name="back">Назад</string>
 	<string name="enable_or_disable_geo">Enable or disable geolocation</string>
+	<string name="list_empty">Список пуст</string>
+	<string name="error_response">Ошибка на сервере</string>
 </resources>
