--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,14 @@
 	<string name="enable_or_disable_geo">Enable or disable geolocation</string>
 	<string name="list_empty">Список пуст</string>
 	<string name="error_response">Ошибка на сервере</string>
+	<string name="error_unexpected">Произошла непредвиденная ошибка</string>
+	<string name="name_of_city">Название города</string>
+	<string name="temperature">Температура °C</string>
+	<string name="wind">Ветер м\\с</string>
+	<string name="cloudy">Облачность %</string>
+	<string name="humidity">Влажность %</string>
+	<string name="pressure">Давление мм</string>
+	<string name="cancel">Отмена</string>
+	<string name="save">Сохранить</string>
+	<string name="editor_of_city">Редактор города</string>
 </resources>
