Added functionality for edit custom points on map

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,16 +22,22 @@
 	<string name="error_response">Ошибка на сервере</string>
 	<string name="error_unexpected">Произошла непредвиденная ошибка</string>
 	<string name="name_of_city">Название города</string>
-	<string name="temperature">Температура °C</string>
-	<string name="wind">Ветер м\\с</string>
+	<string name="temperature">Температура (-90..+60)</string>
+	<string name="wind">Ветер</string>
 	<string name="cloudy">Облачность %</string>
 	<string name="humidity">Влажность %</string>
-	<string name="pressure">Давление мм</string>
+	<string name="pressure">Давление (665–815)</string>
 	<string name="cancel">Отмена</string>
 	<string name="save">Сохранить</string>
 	<string name="editor_of_city">Редактор города</string>
 	<string name="error_valid_name">Название города: минимум 3 символа без пробелов</string>
-	<string name="error_valid_name_spec_chars">Доступны только буквы, пробел, знак тире</string>
-	<string name="error_valid_temp">Температура: допустимый диапазон -90 .. 60</string>
-	<string name="error_valid_pressure">Давление: допустимый диапазон 700 .. 800</string>
+	<string name="error_valid_name_spec_chars">Допустимы только буквы, пробел, знак тире</string>
+	<string name="error_valid_temp">Температура: допустимый диапазон -90 .. +60</string>
+	<string name="error_valid_pressure">Давление: допустимый диапазон 665–815</string>
+	<string name="change">Изменить</string>
+	<string name="current_weather">Текущая погода</string>
+	<string name="temperatureEditHint">°C</string>
+	<string name="cityNameEditHint">Ростов-на-Дону</string>
+	<string name="windEditHint">м/с</string>
+	<string name="pressureEditHint">мм.рт.ст</string>
 </resources>
