--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,9 +23,7 @@
 	<string name="enable_or_disable_geo">Enable or disable geolocation</string>
 	<string name="list_empty">Список пуст</string>
 	<string name="error_unexpected">Произошла непредвиденная ошибка</string>
-	<string name="name_of_city">Название города</string>
 	<string name="cancel">Отмена</string>
-	<string name="save">Сохранить</string>
 	<string name="editor_of_city">Редактор города</string>
 	<string name="error_valid_name">Название города: минимум 3 символа без пробелов</string>
 	<string name="error_valid_name_spec_chars">Допустимы RU-символы, пробел, знак тире</string>
@@ -34,7 +32,7 @@
 	<string name="error_valid_humidity">Влажность не может быть равна 0 при текущей погоде</string>
 	<string name="remove">Удалить</string>
 	<string name="remove_dialog_question">Вы действительно хотите удалить город?</string>
-	<string name="enter_the_city_name">Введите название города</string>
+	<string name="enter_the_city_name">Название города</string>
 	<string name="temperature_min">-90</string>
 	<string name="temperature_max">+60</string>
 	<string name="zero">0</string>
@@ -53,4 +51,8 @@
 	<string name="choose_weather">Выберите погоду:</string>
 	<string name="weather_icon">Иконка погоды</string>
 	<string name="add">Добавить</string>
+	<string name="close">Закрыть</string>
+	<string name="change">Изменить</string>
+	<string name="marker_editor">Редактор маркера</string>
+	<string name="city">Город:</string>
 </resources>
