--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,8 +25,8 @@
 	<string name="error_unexpected">Произошла непредвиденная ошибка</string>
 	<string name="cancel">Отмена</string>
 	<string name="editor_of_city">Редактор города</string>
-	<string name="error_valid_name">Название города: минимум 3 символа без пробелов</string>
-	<string name="error_valid_name_spec_chars">Допустимы RU-символы, пробел, знак тире</string>
+	<string name="error_valid_name">Минимум 3 символа без пробелов и тире</string>
+	<string name="error_valid_name_spec_chars">Допустимы буквы русского алфавита, пробел, знак тире</string>
 	<string name="current_weather">Текущая погода</string>
 	<string name="error_valid_cloudy">Облачность не может быть равна 0 при текущей погоде</string>
 	<string name="error_valid_humidity">Влажность не может быть равна 0 при текущей погоде</string>
