#10 Add Toolbar with back button on the CitiesList screen
* Navigate to the root screen if the cities list is empty (after process death).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="retry">Повторить</string>
     <string name="geo_disabled">Геолокация отключена</string>
     <string name="cd_request_weather_at_user_location">Узнать погоду поблизости</string>
-    <string name="list_empty">Список пуст</string>
+    <string name="cities_list_title">Список городов</string>
     <string name="error_unexpected">Произошла непредвиденная ошибка</string>
     <string name="map_btn_show_in_list">Показать в списке</string>
 </resources>
